--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ factory-boy = "^3.3.0"
 django = "^5.0.3"
 django-rest-framework = "^0.1.0"
 django-extensions = "^3.2.3"
+django-debug-toolbar = "^4.3.0"
 
 
 [build-system]
