--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 pytest = "^8.0.2"
 factory-boy = "^3.3.0"
 django = "^5.0.3"
+psycopg2 = "*"
 django-rest-framework = "^0.1.0"
 django-extensions = "^3.2.3"
 django-debug-toolbar = "^4.3.0"
