--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -7,12 +7,14 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python
-      uses: actions/setup-python@master
+      uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    - name: Use Python version with Poetry
+      run: poetry env use 3.11
     - name: Install poetry
       run: |
-        pip install -u pip
+        pip install -U pip
         pip install poetry
         poetry install
       env: 
