--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 name: Python application
-
 on: [push]
 
 jobs:
@@ -18,6 +17,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Use Python version with Poetry
+      run: poetry env use $(python -c "import sys; print(f'{sys.version_info.major}.{sys.version_info.minor}')")
 
     - name: Install poetry
       run: |
