--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Python application
+
 on: [push]
 
 jobs:
@@ -18,11 +19,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Use Python version with Poetry
-      run: poetry env use $(python -c "import sys; print(f'{sys.version_info.major}.{sys.version_info.minor}')")
-
     - name: Install poetry
       run: |
+        poetry env use 3.11 
         python -m ensurepip
         python -m pip install --upgrade pip
         python -m pip install --upgrade poetry
