--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -10,11 +10,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Use Python version with Poetry
-      run: poetry env use 3.11
     - name: Install poetry
       run: |
-        pip install -U pip
+        poetry env use 3.11
+        pip install -u pip
         pip install poetry
         poetry install
       env: 
