--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,19 +19,18 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install poetry
+    - name: Install Poetry
       run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-        poetry --version
-
+        python -m poetry env use 3.11 
+        python -m ensurepip
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade poetry
     - name: View poetry --help
       run: poetry --help
 
     - name: Install dependencies
       shell: bash
-      run: |
-        python -m poetry env use 3.11
-        python -m poetry install
+      run: python -m poetry install
 
     - name: Test
       run: |
