--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -10,24 +10,19 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Install poetry
+    - name: Install Poetry
       run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-        poetry --version
-
+        python -m pip install --upgrade pip
+        python -m pip install poetry
     - name: View poetry --help
       run: poetry --help
-
-    - name: Install dependencies
-      shell: bash
+    - name: Create and use Poetry environment
       run: |
         python -m poetry env use 3.11
         python -m poetry install
-
     - name: Test
       run: |
         poetry run python manage.py test
-
     - name: Wemake Python Stylguide
       uses: wemake-services/wemake-python-styleguide@0.16.0
       continue-on-error: true
