--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,8 @@ jobs:
 
     - name: Install Poetry
       run: |
-        python -m poetry env use 3.11 
-        python -m ensurepip
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade poetry
+        curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+        source $HOME/.poetry/env
     - name: View poetry --help
       run: poetry --help
 
