--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -10,19 +10,24 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Install Poetry
+    - name: Install poetry
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install poetry
+        curl -sSL https://install.python-poetry.org | python3 -
+        poetry --version
+
     - name: View poetry --help
       run: poetry --help
-    - name: Create and use Poetry environment
+
+    - name: Install dependencies
+      shell: bash
       run: |
         python -m poetry env use 3.11
         python -m poetry install
+
     - name: Test
       run: |
         poetry run python manage.py test
+
     - name: Wemake Python Stylguide
       uses: wemake-services/wemake-python-styleguide@0.16.0
       continue-on-error: true
