--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ psycopg2 = "*"
 django-rest-framework = "^0.1.0"
 django-extensions = "^3.2.3"
 django-debug-toolbar = "^4.3.0"
+gunicorn = "^21.2.0"
+whitenoise = "^6.6.0"
 
 
 [build-system]
