--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,27 @@
+dj-database-url==2.1.0
+Django==5.0.4
+django-allauth==0.54.0
+django-bootstrap5==23.4
+django-channels==0.7.0
+django-ckeditor==6.7.1
+django-ckeditor-5==0.2.12
+django-cors-headers==4.3.1
+django-crispy-forms==2.1
+django-debug-toolbar==4.3.0
+django-dotenv==1.4.2
+django-extensions==3.2.3
+django-filter==24.2
+django-import-export==3.3.7
+django-jazzmin==2.6.1
+django-js-asset==2.2.0
+django-mathfilters==1.0.0
+django-rest-auth==0.9.5
+django-rest-framework==0.1.0
+django-sslserver==0.22
+django-taggit==5.0.1
+django-tortoise==0.0.1
+djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
 poetry==1.8.2
 poetry-core==1.9.0
 poetry-plugin-export==1.7.1
