--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ django-extensions = "^3.2.3"
 django-debug-toolbar = "^4.3.0"
 gunicorn = "^21.2.0"
 whitenoise = "^6.6.0"
+psycopg2-binary = "^2.9.9"
+gitpython = "^3.1.43"
 
 
 [build-system]
