--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        python -m poetry env use 3.11
+        python -m poetry env use 3.8 # Versão corrigida
         python -m poetry install
 
     - name: Test
