--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ psycopg2-binary = "^2.9.9"
 gitpython = "^3.1.43"
 
 
+[tool.poetry.group.dev.dependencies]
+waitress = "^3.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
