refactor/heroku-deploy-2.0

--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -22,6 +22,7 @@ jobs:
       shell: bash
       run: |
         python -m poetry env use 3.8 # Versão corrigida
+        python -m poetry lock --no-update
         python -m poetry install
 
     - name: Test
