refactor/heroku-deploy-2.1

--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        python -m poetry env use 3.8 # Versão corrigida
+        python -m poetry env use 3.8 
         python -m poetry lock --no-update
         python -m poetry install
 
